--- a/html/css/style.css
+++ b/html/css/style.css
@@ -11,7 +11,6 @@
     width: 100%;
     height: 100%;
     
-    background-color: red;
 }
 
 .container {
@@ -24,7 +23,6 @@
     height: 40vh;
 
     border-radius: 0.6vh;
-    background-color: #90a4ae;
     margin-right: 1%;
 }
 
@@ -35,8 +33,6 @@
     align-items: center;
     width: 50%;
     height: 15%;
-
-    background-color: coral;
 }
 
 .dp-select {
@@ -62,9 +58,7 @@ select optgroup {
 .dp-tab-container {
     position: relative;
     width: 100%;
-    height: 80%;
-
-    background-color: #825acc;
+    height: 100%;
 }
 
 .dp-tabs {
@@ -76,11 +70,94 @@ select optgroup {
 
 .dispatch {
     opacity: 1;
-    background-color: coral;
 }
 
 .officers {
     opacity: 0;
-    background-color: chartreuse;
 }
 
+.dp-header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+    height: 15%;
+
+    background-color: #444444;
+    border-top-left-radius: 0.5vh;
+    border-top-right-radius: 0.5vh;
+}
+
+.header-text {
+    font-size: 1.4vh;
+    font-family: defbold;
+    font-weight: 100;
+    color: #a9a9a9;
+}
+
+.left {
+    margin-left: 2.5%;
+}
+
+.header-title {
+    font-size: 2.2vh;
+    font-family: defbold;
+    font-weight: 100;
+    text-decoration: underline;
+    color: #bbbbbb;
+}
+
+.right {
+    margin-right: 2.5%;
+}
+
+.dp-info-container {
+    width: 100%;
+    height: 70%;
+
+    background-color: rgb(251, 127, 255);
+}
+
+.dp-move-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 15%;
+    
+    background-color: #444444;
+    border-bottom-left-radius: 0.5vh;
+    border-bottom-right-radius: 0.5vh;
+}
+
+.fas {
+    font-size: 2.6vh;
+    color: #a9a9a9;
+    z-index: 3;
+}
+
+.container-slides {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    
+    background-color: #a9a9a9;
+}
+
+.slide-text {
+    text-align: center;
+    font-size: 1.8vh;
+    font-family: def;
+    font-weight: 700;
+    color: #444444;
+}
+
+.slide-img {
+    margin-top: 2.5%;
+    width: 25vh;
+    border-radius: 0.6vh;
+}
