--- a/html/css/style.css
+++ b/html/css/style.css
@@ -138,14 +138,17 @@ select optgroup {
 }
 
 .container-slides {
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height: 100%;
+    height: 70%;
+    opacity: 0;
     
     background-color: #a9a9a9;
+    z-index: 0;
 }
 
 .slide-text {
