--- a/html/css/style.css
+++ b/html/css/style.css
@@ -116,7 +116,19 @@ select optgroup {
     width: 100%;
     height: 70%;
 
-    background-color: rgb(251, 127, 255);
+    background-color: #a9a9a9;
+}
+
+.prev-cont {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+
+    font-size: 3.0vh;
+    font-family: defbold;
+    font-weight: 700;
+    color: #444444;
 }
 
 .dp-move-container {
